--- a/db_config.ini
+++ b/db_config.ini
@@ -1,7 +1,7 @@
 [db]
 driver: {SQL Server}
-host: LAPTOP-CQVMAKEL
-db: AdsDB
+host: LAPTOP-name
+db: DBname
 user: TestUser
-password: T1e2s3t
+password: TestPass
 connection: Remote
