--- a/local_db_config.ini
+++ b/local_db_config.ini
@@ -1,7 +1,15 @@
-[db]
+[local_db]
 driver: {SQL Server}
 host: .
 db: AdsDB
 user: .
 password: .
 connection: Local
+
+[remote_db]
+driver: {SQL Server}
+host: server/LAPTOP-name
+db: DBname
+user: TestUser
+password: TestPass
+connection: Remote
