--- a/local_db_config.ini
+++ b/local_db_config.ini
@@ -1,15 +1,15 @@
 [local_db]
 driver: {SQL Server}
-host: .
-db: AdsDB
+host: .\
+db: Demo
 user: .
 password: .
 connection: Local
 
 [remote_db]
 driver: {SQL Server}
-host: server/LAPTOP-name
-db: DBname
+host: LAPTOP-CQVMAKEL
+db: AdsDB
 user: TestUser
-password: TestPass
+password: T1e2s3t
 connection: Remote
