--- a/local_db_config.ini
+++ b/local_db_config.ini
@@ -1,15 +1,7 @@
-[local_db]
+[db]
 driver: {SQL Server}
-host: .\
-db: Demo
+host: .
+db: AdsDB
 user: .
 password: .
 connection: Local
-
-[remote_db]
-driver: {SQL Server}
-host: LAPTOP-CQVMAKEL
-db: AdsDB
-user: TestUser
-password: T1e2s3t
-connection: Remote
